# shaker

./: .gitignore  Cargo.toml
.sqlx/: query-008cb739696b1256eeeb97507545b19c3d396a5088d11f7e37f05da772e67bd0.json  query-09177b4e5be4539919aa99cbcc88e3a99811361618a4c20fcad53fa4b3ac2511.json  query-1908d10018f6e483c13f7481ceb32b76701f0e7af57ede861496c1b63ea958ac.json  query-1a1d04f2731e34ddac864ee64d3eef23aa80c840c2335b2c2e262beb9979585f.json  query-26e7e05427bc7dabcd7815d27764fda2baf4cfe60a2d2d6ee2a1f773dccbbce2.json  query-3dcbb4e0f27b8bbdba63d2a0af3f1af2f68c66436a0b4b602451fba90eb791a9.json  query-5620a5cbd8eb42af5c0c946dfc415a6243aa66a87f4fe051bb3ee6ba91e3ca32.json  query-68eef9ac1ab979ad69b71420a67d934a7fc34fb7624e016209aaf42f65af6757.json  query-a18858310f4be735837f6aa957b52ad5f28f89a11c0298a3cd31b2a430e25529.json  query-a51a3392e1b8f39c796d72a0be83a44f4dbf39de005ee65143954dde48fa1148.json  query-ad8ece68b3643d03529a18004b355a626ac0e859ba310140c053651419bdba87.json  query-ba74f043b7515a0e4750054f42b5f918c5fa3278c47dbdf8957ea3fbbcd62626.json  query-d03917037f290289fec40bbd1e4e6480a06cce7c263b3c3461a35d54d45d72f1.json  query-dc9c285f6093815ed5ab67395034cf9cdbfc8729b7b410cae4799f12155eccc3.json  query-f29dba3ff9445973e58d46f575a848839473141af8eec07fb2675567045e5c73.json
migrations/: 20240601232612_users.sql  20240601232616_handshakes.sql
src/: api.rs  db.rs  main.rs
