[package]
name = "shaker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
clap = { version = "4.5.3", features = ["env", "derive"] }
dotenv = "0.15.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
sqlx = { version = "0.7.4", features = [
	"runtime-tokio",
	"tls-rustls",
	"sqlite",
	"migrate",
	"time",
] }
time = { version = "0.3.36", features = ["serde"] }
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["time"] }
